--- a/academic/views/course.xml
+++ b/academic/views/course.xml
@@ -26,6 +26,7 @@
                 <form string="Course Form">
                     <sheet>
                         <div class="oe_title">
+                            <label for="name" class="oe_edit_only" string="Course Name"/>
                             <h1>
                                 <field name="name"/>
                             </h1>
