--- a/academic/views/menu.xml
+++ b/academic/views/menu.xml
@@ -32,13 +32,31 @@
             </field>
         </record>
 
+        <!-- academic.attendee action window -->
+        <record id="action_attendee_list" model="ir.actions.act_window">
+            <field name="name">Daftar Attende</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">academic.attendee</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_type">form</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    <!-- Add Text Here -->
+                </p><p>
+                    <!-- More details about what a user can do with this object will be OK --> 
+                </p>
+            </field>
+        </record>
+
 
         <menuitem id="academic_0" name="Academic" sequence="2"/>
         <menuitem id="academic_1" name="Academic" parent="academic_0" sequence="2"/>
 
         <menuitem id="menu_academic_course" name="Course" parent="academic_1" action="action_course_list" sequence="2"/>
 
-        <menuitem id="menu_academic_sessio" name="session" parent="academic_1" action="action_session_list" sequence="2"/>
+        <menuitem id="menu_academic_session" name="Session" parent="academic_1" action="action_session_list" sequence="2"/>
+
+        <menuitem id="menu_academic_attendee" name="Attendee" parent="academic_1" action="action_attendee_list" sequence="2"/>
 
     </data>
 </odoo>
