--- a/academic/views/session.xml
+++ b/academic/views/session.xml
@@ -35,7 +35,9 @@
                             <!-- Add your fields here -->
                             <group>
                                 <field name="course_id"/>
-                                <field name="instructor_id"/>
+                                <field name="instructor_id" 
+                                    domain="[('is_instructor','=',True)]"/>
+                                            <!-- sesuatu adalah sesuatu -->
                                 <field name="start_date"/>
                             </group>
                             <group>
