--- a/academic/views/menu.xml
+++ b/academic/views/menu.xml
@@ -48,8 +48,26 @@
             </field>
         </record>
 
+        <!-- res.partner action window -->
+        <record id="action_instructor_list" model="ir.actions.act_window">
+            <field name="name">Daftar Instructor</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{"search_default_instructor":1}</field>
+            <field name="view_type">form</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    <!-- Add Text Here -->
+                </p><p>
+                    <!-- More details about what a user can do with this object will be OK --> 
+                </p>
+            </field>
+        </record>
+
 
         <menuitem id="academic_0" name="Academic" sequence="2"/>
+
         <menuitem id="academic_1" name="Academic" parent="academic_0" sequence="2"/>
 
         <menuitem id="menu_academic_course" name="Course" parent="academic_1" action="action_course_list" sequence="2"/>
@@ -57,6 +75,8 @@
         <menuitem id="menu_academic_session" name="Session" parent="academic_1" action="action_session_list" sequence="2"/>
 
         <menuitem id="menu_academic_attendee" name="Attendee" parent="academic_1" action="action_attendee_list" sequence="2"/>
+        
+        <menuitem id="menu_academic_instructor" name="Instructor" parent="academic_1" action="action_instructor_list" sequence="2"/>
 
     </data>
 </odoo>
