Taken Seats Static

--- a/academic/views/session.xml
+++ b/academic/views/session.xml
@@ -15,6 +15,7 @@
                     <field name="start_date"/>
                     <field name="duration"/>
                     <field name="seats"/>
+                    <field name="taken_seats"/>
                     <field name="active"/>
                 </tree>
             </field>
@@ -43,6 +44,7 @@
                             <group>
                                 <field name="duration"/>
                                 <field name="seats"/>
+                                <field name="taken_seats"/>
                                 <field name="active"/>
                             </group>
                         </group>
