--- a/academic/views/menu.xml
+++ b/academic/views/menu.xml
@@ -21,7 +21,7 @@
             <field name="name">Daftar Session</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">academic.session</field>
-            <field name="view_mode">tree,form,calendar,graph</field>
+            <field name="view_mode">tree,form,calendar,graph,kanban</field>
             <field name="view_type">form</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
