--- a/academic/views/attendee.xml
+++ b/academic/views/attendee.xml
@@ -11,6 +11,7 @@
                     <!-- Add your fields here -->
                     <field name="name"/>
                     <field name="session_id"/>
+                    <field name="course_id"/>
                     <field name="partner_id"/>
                 </tree>
             </field>
@@ -27,6 +28,7 @@
                             <!-- Add your fields here -->
                             <field name="name"/>
                             <field name="session_id"/>
+                            <field name="course_id"/>
                             <field name="partner_id"/>
                         </group>
                     </sheet>
