--- a/academic/views/session.xml
+++ b/academic/views/session.xml
@@ -17,6 +17,7 @@
                     <field name="seats"/>
                     <field name="taken_seats" widget="progressbar"/>
                     <field name="active"/>
+                    <field name="state"/>
                 </tree>
             </field>
         </record>
@@ -27,6 +28,21 @@
             <field name="model">academic.session</field>
             <field name="arch" type="xml">
                 <form string="Session">
+                    <header>
+                        <button string="Confirm" 
+                            type="object"
+                            states="draft" 
+                            name="action_confirm"/>
+                        <button string="Mark as Done" 
+                            type="object"
+                            states="confirmed" 
+                            name="action_done"/>
+                        <button string="Reject" 
+                            type="object"
+                            states="confirmed" 
+                            name="action_draft"/>
+                        <field name="state" widget="statusbar"/>
+                    </header>
                     <sheet>
                         <h1>
                             <label for="name" class="oe_edit_only" string="Session Name"/>
